WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232642
Fix consistency issues with localized strings, and regenerate localizable.strings
https://bugs.webkit.org/show_bug.cgi?id=232642
Summary
Fix consistency issues with localized strings, and regenerate localizable.str...
David Kilzer (:ddkilzer)
Reported
2021-11-02 15:17:33 PDT
Fix consistency issues with localized strings and regenerate localizable.strings.
Attachments
Patch v1
(11.64 KB, patch)
2021-11-02 15:23 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Patch v2
(11.12 KB, patch)
2021-11-02 16:25 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2021-11-02 15:23:31 PDT
Created
attachment 443138
[details]
Patch v1
Devin Rousso
Comment 2
2021-11-02 15:26:37 PDT
Comment on
attachment 443138
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=443138&action=review
> Source/WebCore/en.lproj/Localizable.strings:38 > +"%@ Easy (text track)" = "%@ Easy Reader";
this should actually probably be fixed in the corresponding code 😅
David Kilzer (:ddkilzer)
Comment 3
2021-11-02 15:55:39 PDT
Comment on
attachment 443138
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=443138&action=review
>> Source/WebCore/en.lproj/Localizable.strings:38 >> +"%@ Easy (text track)" = "%@ Easy Reader"; > > this should actually probably be fixed in the corresponding code 😅
Ah, I wasn't sure which way to go. I will change the code to match the format string. Thanks!
David Kilzer (:ddkilzer)
Comment 4
2021-11-02 16:16:08 PDT
Comment on
attachment 443138
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=443138&action=review
> Source/WebCore/platform/cocoa/LocalizedStringsCocoa.mm:280 > - return [NSString localizedStringWithFormat:WEB_UI_NSSTRING(@"Use no more than %d character(s)", @"Validation message for form control elements with a value shorter than maximum allowed length"), maxLength]; > + return formatLocalizedString(WEB_UI_CFSTRING("Use no more than %d character(s)", "Validation message for form control elements with a value shorter than maximum allowed length"), maxLength);
This caused a regression, so I'm going to remove it from this patch. (It will appear in a follow-up patch, though.)
David Kilzer (:ddkilzer)
Comment 5
2021-11-02 16:25:20 PDT
Created
attachment 443143
[details]
Patch v2
David Kilzer (:ddkilzer)
Comment 6
2021-11-03 14:59:17 PDT
Comment on
attachment 443143
[details]
Patch v2 Thanks Megan!
EWS
Comment 7
2021-11-03 15:07:32 PDT
Committed
r285234
(
243855@main
): <
https://commits.webkit.org/243855@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 443143
[details]
.
Radar WebKit Bug Importer
Comment 8
2021-11-03 15:08:19 PDT
<
rdar://problem/84993811
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug