Fix consistency issues with localized strings and regenerate localizable.strings <https://webkit.org/b/232642>

Reviewed by Megan Gardner.

* en.lproj/Localizable.strings:
- Regenerate the file using update-webkit-localizable-strings.
- List of strings realphabetized, except as noted below.
("%@ (%@ Internet plug-in)"): Delete.
- Removed in r285047 for Bug 232462.

* platform/LocalizedStrings.cpp:
(WebCore::addTextTrackKindEasyReaderSuffix):
- Fix unlocalized string that regressed in r278202 for
  Bug 226361.
(WebCore::useBlockedPlugInContextMenuTitle):
- Remove unneeded call to WebCore::formatLocalizedString() since
  there are no placeholders to replace.

* platform/cocoa/LocalizedStringsCocoa.mm:
(WebCore::contextMenuItemTagSearchWeb):
(WebCore::contextMenuItemTagShowFonts):
- Switch from calling WebCore::localizedNSString() directly to
  using WEB_UI_NSSTRING() so these strings will be found by
  update-webkit-localizable-strings.



Canonical link: https://commits.webkit.org/243855@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285234 268f45cc-cd09-0410-ab3c-d52691b4dbfc